--- a/css/flipclock.css
+++ b/css/flipclock.css
@@ -85,6 +85,8 @@
 	width: 100%;
 	height: 100%;
 	list-style: none !important;
+	margin: 0 !important;
+	padding: 0 !important;
 }
 
 .flip-clock-wrapper ul li:first-child {
