--- a/css/flipclock_prefixed.css
+++ b/css/flipclock_prefixed.css
@@ -58,8 +58,9 @@
   font-size: 80px;
   font-weight: bold;
   line-height: 87px;
-  border-radius: 6px _prefixed;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7); }
+  border-radius: 6px;
+  background: #000;
+}
 
 .flip-clock-wrapper ul li {
   z-index: 1;
@@ -67,7 +68,9 @@
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  text-decoration: none !important;
+}
 
 .flip-clock-wrapper ul li:first-child {
   z-index: 2; }
@@ -79,7 +82,8 @@
   -moz-perspective: 200px;
   perspective: 200px;
   margin: 0 !important;
-  overflow: visible !important; }
+  overflow: visible !important;
+  cursor: default !important; }
 
 .flip-clock-wrapper ul li a div {
   z-index: 1;
@@ -87,6 +91,7 @@
   left: 0;
   width: 100%;
   height: 50%;
+  font-size: 80px;
   overflow: hidden; }
 
 .flip-clock-wrapper ul li a div .shadow {
@@ -145,6 +150,8 @@
 .flip-clock-wrapper ul.play li.flip-clock-before {
   z-index: 3; }
 
+.flip-clock-wrapper .flip {   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7); }
+
 .flip-clock-wrapper ul.play li.flip-clock-active {
   -webkit-animation: asd 0.5s 0.5s linear both;
   -moz-animation: asd 0.5s 0.5s linear both;
@@ -168,7 +175,8 @@
   height: 10px;
   position: absolute;
   border-radius: 50%;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5); }
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+  left: 5px; }
 
 .flip-clock-divider .flip-clock-label {
   position: absolute;
