--- a/compiled/flipclock.css
+++ b/compiled/flipclock.css
@@ -107,8 +107,8 @@
   width: 100%;
   height: 50%;
   font-size: 80px;
-  outline: 1px solid transparent;
-  overflow: hidden; }
+  overflow: hidden; 
+  outline: 1px solid transparent; }
 
 .flip-clock-wrapper ul li a div .shadow {
   position: absolute;
