--- a/src/flipclock/css/flipclock.css
+++ b/src/flipclock/css/flipclock.css
@@ -13,12 +13,12 @@
     backface-visibility: hidden;
 }
 
-.flip-clock-wrapper a {
+.flip-clock-wrapper div.facesWrapper {
   cursor: pointer;
   text-decoration: none;
   color: #ccc; }
 
-.flip-clock-wrapper a:hover {
+.flip-clock-wrapper {
   color: #fff; }
 
 .flip-clock-wrapper ul {
@@ -45,7 +45,7 @@
   box-shadow: 0 0 0 !important;
   font-size: 36px !important; }
 
-.flip-clock-meridium a { color: #313333; }
+.flip-clock-meridium div.facesWrapper { color: #313333; }
 
 .flip-clock-wrapper {
   text-align: center;
@@ -91,7 +91,7 @@
 .flip-clock-wrapper ul li:first-child {
   z-index: 2; }
 
-.flip-clock-wrapper ul li a {
+.flip-clock-wrapper ul li div.facesWrapper {
   display: block;
   height: 100%;
   -webkit-perspective: 200px;
@@ -101,7 +101,7 @@
   overflow: visible !important;
   cursor: default !important; }
 
-.flip-clock-wrapper ul li a div {
+.flip-clock-wrapper ul li div.facesWrapper div {
   z-index: 1;
   position: absolute;
   left: 0;
@@ -111,13 +111,13 @@
   overflow: hidden; 
   outline: 1px solid transparent; }
 
-.flip-clock-wrapper ul li a div .shadow {
+.flip-clock-wrapper ul li div.facesWrapper div .shadow {
   position: absolute;
   width: 100%;
   height: 100%;
   z-index: 2; }
 
-.flip-clock-wrapper ul li a div.up {
+.flip-clock-wrapper ul li div.facesWrapper div.up {
   -webkit-transform-origin: 50% 100%;
   -moz-transform-origin: 50% 100%;
   -ms-transform-origin: 50% 100%;
@@ -125,7 +125,7 @@
   transform-origin: 50% 100%;
   top: 0; }
 
-.flip-clock-wrapper ul li a div.up:after {
+.flip-clock-wrapper ul li div.facesWrapper div.up:after {
   content: "";
   position: absolute;
   top: 44px;
@@ -136,7 +136,7 @@
   background-color: #000;
   background-color: rgba(0, 0, 0, 0.4); }
 
-.flip-clock-wrapper ul li a div.down {
+.flip-clock-wrapper ul li div.facesWrapper div.down {
   -webkit-transform-origin: 50% 0;
   -moz-transform-origin: 50% 0;
   -ms-transform-origin: 50% 0;
@@ -147,7 +147,7 @@
   border-bottom-right-radius: 6px;
 }
 
-.flip-clock-wrapper ul li a div div.inn {
+.flip-clock-wrapper ul li div.facesWrapper div div.inn {
   position: absolute;
   left: 0;
   z-index: 1;
@@ -160,10 +160,10 @@
   border-radius: 6px;
   font-size: 70px; }
 
-.flip-clock-wrapper ul li a div.up div.inn {
+.flip-clock-wrapper ul li div.facesWrapper div.up div.inn {
   top: 0; }
 
-.flip-clock-wrapper ul li a div.down div.inn {
+.flip-clock-wrapper ul li div.facesWrapper div.down div.inn {
   bottom: 0; }
 
 /* PLAY */
