--- a/src/flipclock/css/flipclock.css
+++ b/src/flipclock/css/flipclock.css
@@ -108,7 +108,7 @@
   width: 100%;
   height: 50%;
   font-size: 80px;
-  overflow: hidden; 
+  overflow: hidden;
   outline: 1px solid transparent; }
 
 .flip-clock-wrapper ul li a div .shadow {
@@ -259,9 +259,9 @@
 
 .flip-clock-wrapper ul.play li.flip-clock-active .down {
   z-index: 2;
-  -webkit-animation: turn 0.5s 0.5s linear both;
-  -moz-animation: turn 0.5s 0.5s linear both;
-  animation: turn 0.5s 0.5s linear both; }
+  -webkit-animation: turn .25s .5s linear both;
+  -moz-animation: turn .25s .5s linear both;
+  animation: turn .25s .5s linear both; }
 
 @-webkit-keyframes turn {
   0% {
@@ -293,9 +293,9 @@
 
 .flip-clock-wrapper ul.play li.flip-clock-before .up {
   z-index: 2;
-  -webkit-animation: turn2 0.5s linear both;
-  -moz-animation: turn2 0.5s linear both;
-  animation: turn2 0.5s linear both; }
+  -webkit-animation: turn2 .5s cubic-bezier(0.55, 0.055, 0.675, 0.19) both;
+  -moz-animation: turn2 .5s cubic-bezier(0.55, 0.055, 0.675, 0.19) both;
+  animation: turn2 .5s cubic-bezier(0.55, 0.055, 0.675, 0.19) both; }
 
 @-webkit-keyframes turn2 {
   0% {
