SASS compiling to css, sourcemaps enabled
Signed-off-by: Brian Espinosa <brian@getplayerpro.com>

--- a/src/flipclock/scss/flipclock.scss
+++ b/src/flipclock/scss/flipclock.scss
@@ -1,15 +1,5 @@
-/* Get the bourbon mixin from http://bourbon.io */
-/* Reset */
 .flip-clock-wrapper * {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    -o-box-sizing: border-box;
     box-sizing: border-box;
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -ms-backface-visibility: hidden;
-    -o-backface-visibility: hidden;
     backface-visibility: hidden;
 }
 
@@ -118,10 +108,6 @@
   z-index: 2; }
 
 .flip-clock-wrapper ul li a div.up {
-  -webkit-transform-origin: 50% 100%;
-  -moz-transform-origin: 50% 100%;
-  -ms-transform-origin: 50% 100%;
-  -o-transform-origin: 50% 100%;
   transform-origin: 50% 100%;
   top: 0; }
 
@@ -137,10 +123,6 @@
   background-color: rgba(0, 0, 0, 0.4); }
 
 .flip-clock-wrapper ul li a div.down {
-  -webkit-transform-origin: 50% 0;
-  -moz-transform-origin: 50% 0;
-  -ms-transform-origin: 50% 0;
-  -o-transform-origin: 50% 0;
   transform-origin: 50% 0;
   bottom: 0;
   border-bottom-left-radius: 6px;
@@ -173,8 +155,6 @@
 .flip-clock-wrapper .flip {   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7); }
 
 .flip-clock-wrapper ul.play li.flip-clock-active {
-  -webkit-animation: asd 0.5s 0.5s linear both;
-  -moz-animation: asd 0.5s 0.5s linear both;
   animation: asd 0.5s 0.5s linear both;
   z-index: 5; }
 
@@ -217,36 +197,6 @@
 .flip-clock-dot.bottom {
   bottom: 30px; }
 
-@-webkit-keyframes asd {
-  0% {
-    z-index: 2; }
-
-  20% {
-    z-index: 4; }
-
-  100% {
-    z-index: 4; } }
-
-@-moz-keyframes asd {
-  0% {
-    z-index: 2; }
-
-  20% {
-    z-index: 4; }
-
-  100% {
-    z-index: 4; } }
-
-@-o-keyframes asd {
-  0% {
-    z-index: 2; }
-
-  20% {
-    z-index: 4; }
-
-  100% {
-    z-index: 4; } }
-
 @keyframes asd {
   0% {
     z-index: 2; }
@@ -258,31 +208,7 @@
     z-index: 4; } }
 
 .flip-clock-wrapper ul.play li.flip-clock-active .down {
-  z-index: 2;
-  -webkit-animation: turn 0.5s 0.5s linear both;
-  -moz-animation: turn 0.5s 0.5s linear both;
   animation: turn 0.5s 0.5s linear both; }
-
-@-webkit-keyframes turn {
-  0% {
-    -webkit-transform: rotateX(90deg); }
-
-  100% {
-    -webkit-transform: rotateX(0deg); } }
-
-@-moz-keyframes turn {
-  0% {
-    -moz-transform: rotateX(90deg); }
-
-  100% {
-    -moz-transform: rotateX(0deg); } }
-
-@-o-keyframes turn {
-  0% {
-    -o-transform: rotateX(90deg); }
-
-  100% {
-    -o-transform: rotateX(0deg); } }
 
 @keyframes turn {
   0% {
@@ -293,37 +219,17 @@
 
 .flip-clock-wrapper ul.play li.flip-clock-before .up {
   z-index: 2;
-  -webkit-animation: turn2 0.5s linear both;
-  -moz-animation: turn2 0.5s linear both;
   animation: turn2 0.5s linear both; }
-
-@-webkit-keyframes turn2 {
-  0% {
-    -webkit-transform: rotateX(0deg); }
-
-  100% {
-    -webkit-transform: rotateX(-90deg); } }
-
-@-moz-keyframes turn2 {
-  0% {
-    -moz-transform: rotateX(0deg); }
-
-  100% {
-    -moz-transform: rotateX(-90deg); } }
-
-@-o-keyframes turn2 {
-  0% {
-    -o-transform: rotateX(0deg); }
-
-  100% {
-    -o-transform: rotateX(-90deg); } }
 
 @keyframes turn2 {
   0% {
-    transform: rotateX(0deg); }
+    transform: rotateX(0deg);
+  }
 
   100% {
-    transform: rotateX(-90deg); } }
+    transform: rotateX(-90deg);
+  }
+}
 
 .flip-clock-wrapper ul li.flip-clock-active {
   z-index: 3; }
@@ -336,8 +242,6 @@
   background: -o-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
   background: -ms-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
   background: linear, to bottom, rgba(0, 0, 0, 0.1) 0%, black 100%;
-  -webkit-animation: show 0.5s linear both;
-  -moz-animation: show 0.5s linear both;
   animation: show 0.5s linear both; }
 
 .flip-clock-wrapper ul.play li.flip-clock-active .up .shadow {
@@ -347,8 +251,6 @@
   background: -o-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
   background: -ms-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
   background: linear, to bottom, rgba(0, 0, 0, 0.1) 0%, black 100%;
-  -webkit-animation: hide 0.5s 0.3s linear both;
-  -moz-animation: hide 0.5s 0.3s linear both;
   animation: hide 0.5s 0.3s linear both; }
 
 /*DOWN*/
@@ -359,8 +261,6 @@
   background: -o-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
   background: -ms-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
   background: linear, to bottom, black 0%, rgba(0, 0, 0, 0.1) 100%;
-  -webkit-animation: show 0.5s linear both;
-  -moz-animation: show 0.5s linear both;
   animation: show 0.5s linear both; }
 
 .flip-clock-wrapper ul.play li.flip-clock-active .down .shadow {
@@ -370,62 +270,24 @@
   background: -o-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
   background: -ms-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
   background: linear, to bottom, black 0%, rgba(0, 0, 0, 0.1) 100%;
-  -webkit-animation: hide 0.5s 0.3s linear both;
-  -moz-animation: hide 0.5s 0.3s linear both;
   animation: hide 0.5s 0.2s linear both; }
-
-@-webkit-keyframes show {
-  0% {
-    opacity: 0; }
-
-  100% {
-    opacity: 1; } }
-
-@-moz-keyframes show {
-  0% {
-    opacity: 0; }
-
-  100% {
-    opacity: 1; } }
-
-@-o-keyframes show {
-  0% {
-    opacity: 0; }
-
-  100% {
-    opacity: 1; } }
 
 @keyframes show {
   0% {
-    opacity: 0; }
+    opacity: 0;
+  }
 
   100% {
-    opacity: 1; } }
-
-@-webkit-keyframes hide {
-  0% {
-    opacity: 1; }
-
-  100% {
-    opacity: 0; } }
-
-@-moz-keyframes hide {
-  0% {
-    opacity: 1; }
-
-  100% {
-    opacity: 0; } }
-
-@-o-keyframes hide {
-  0% {
-    opacity: 1; }
-
-  100% {
-    opacity: 0; } }
+    opacity: 1;
+  }
+}
 
 @keyframes hide {
   0% {
-    opacity: 1; }
+    opacity: 1;
+  }
 
   100% {
-    opacity: 0; } }
+    opacity: 0;
+  }
+}
