--- a/src/flipclock/scss/_fc-base.scss
+++ b/src/flipclock/scss/_fc-base.scss
@@ -1,60 +1,60 @@
-.flip-clock-wrapper * {
+.flipclock-wrapper * {
     box-sizing: border-box;
     backface-visibility: hidden;
 }
 
-.flip-clock-wrapper a {
+.flipclock-wrapper a {
   cursor: pointer;
   text-decoration: none;
   color: #ccc; }
 
-.flip-clock-wrapper a:hover {
+.flipclock-wrapper a:hover {
   color: #fff; }
 
-.flip-clock-wrapper ul {
+.flipclock-wrapper ul {
   list-style: none; }
 
-.flip-clock-wrapper.clearfix:before,
-.flip-clock-wrapper.clearfix:after {
+.flipclock-wrapper.clearfix:before,
+.flipclock-wrapper.clearfix:after {
   content: " ";
   display: table; }
 
-.flip-clock-wrapper.clearfix:after {
+.flipclock-wrapper.clearfix:after {
   clear: both; }
 
-.flip-clock-wrapper.clearfix {
+.flipclock-wrapper.clearfix {
   *zoom: 1; }
 
 /* Main */
-.flip-clock-wrapper {
+.flipclock-wrapper {
   font: normal 11px "Helvetica Neue", Helvetica, sans-serif;
   -webkit-user-select: none; }
 
-.flip-clock-meridium {
+.flipclock-meridium {
   background: none !important;
   box-shadow: 0 0 0 !important;
   font-size: 36px !important; }
 
-.flip-clock-meridium a { color: #313333; }
+.flipclock-meridium a { color: #313333; }
 
-.flip-clock-wrapper {
+.flipclock-wrapper {
   text-align: center;
   position: relative;
   width: 100%;
   margin: 1em;
 }
 
-.flip-clock-wrapper:before,
-.flip-clock-wrapper:after {
+.flipclock-wrapper:before,
+.flipclock-wrapper:after {
     content: " "; /* 1 */
     display: table; /* 2 */
 }
-.flip-clock-wrapper:after {
+.flipclock-wrapper:after {
     clear: both;
 }
 
 /* Skeleton */
-.flip-clock-wrapper ul {
+.flipclock-wrapper ul {
   position: relative;
   float: left;
   margin: 5px;
@@ -67,7 +67,7 @@
   background: #000;
 }
 
-.flip-clock-wrapper ul li {
+.flipclock-wrapper ul li {
   z-index: 1;
   position: absolute;
   left: 0;
@@ -78,10 +78,10 @@
   text-decoration: none !important;
 }
 
-.flip-clock-wrapper ul li:first-child {
+.flipclock-wrapper ul li:first-child {
   z-index: 2; }
 
-.flip-clock-wrapper ul li a {
+.flipclock-wrapper ul li a {
   display: block;
   height: 100%;
   -webkit-perspective: 200px;
@@ -91,7 +91,7 @@
   overflow: visible !important;
   cursor: default !important; }
 
-.flip-clock-wrapper ul li a div {
+.flipclock-wrapper ul li a div {
   z-index: 1;
   position: absolute;
   left: 0;
@@ -101,17 +101,17 @@
   overflow: hidden; 
   outline: 1px solid transparent; }
 
-.flip-clock-wrapper ul li a div .shadow {
+.flipclock-wrapper ul li a div .shadow {
   position: absolute;
   width: 100%;
   height: 100%;
   z-index: 2; }
 
-.flip-clock-wrapper ul li a div.up {
+.flipclock-wrapper ul li a div.up {
   transform-origin: 50% 100%;
   top: 0; }
 
-.flip-clock-wrapper ul li a div.up:after {
+.flipclock-wrapper ul li a div.up:after {
   content: "";
   position: absolute;
   top: 44px;
@@ -122,14 +122,14 @@
   background-color: #000;
   background-color: rgba(0, 0, 0, 0.4); }
 
-.flip-clock-wrapper ul li a div.down {
+.flipclock-wrapper ul li a div.down {
   transform-origin: 50% 0;
   bottom: 0;
   border-bottom-left-radius: 6px;
   border-bottom-right-radius: 6px;
 }
 
-.flip-clock-wrapper ul li a div div.inn {
+.flipclock-wrapper ul li a div div.inn {
   position: absolute;
   left: 0;
   z-index: 1;
@@ -142,33 +142,33 @@
   border-radius: 6px;
   font-size: 70px; }
 
-.flip-clock-wrapper ul li a div.up div.inn {
+.flipclock-wrapper ul li a div.up div.inn {
   top: 0; }
 
-.flip-clock-wrapper ul li a div.down div.inn {
+.flipclock-wrapper ul li a div.down div.inn {
   bottom: 0; }
 
 /* PLAY */
-.flip-clock-wrapper ul.play li.flip-clock-before {
+.flipclock-wrapper ul.play li.flipclock-before {
   z-index: 3; }
 
-.flip-clock-wrapper .flip {   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7); }
+.flipclock-wrapper .flip {   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7); }
 
-.flip-clock-wrapper ul.play li.flip-clock-active {
+.flipclock-wrapper ul.play li.flipclock-active {
   animation: asd 0.5s 0.5s linear both;
   z-index: 5; }
 
-.flip-clock-divider {
+.flipclock-divider {
   float: left;
   display: inline-block;
   position: relative;
   width: 20px;
   height: 100px; }
 
-.flip-clock-divider:first-child {
+.flipclock-divider:first-child {
   width: 0; }
 
-.flip-clock-dot {
+.flipclock-dot {
   display: block;
   background: #323434;
   width: 10px;
@@ -178,23 +178,23 @@
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   left: 5px; }
 
-.flip-clock-divider .flip-clock-label {
+.flipclock-divider .flipclock-label {
   position: absolute;
   top: -1.5em;
   right: -86px;
   color: black;
   text-shadow: none; }
 
-.flip-clock-divider.minutes .flip-clock-label {
+.flipclock-divider.minutes .flipclock-label {
   right: -88px; }
 
-.flip-clock-divider.seconds .flip-clock-label {
+.flipclock-divider.seconds .flipclock-label {
   right: -91px; }
 
-.flip-clock-dot.top {
+.flipclock-dot.top {
   top: 30px; }
 
-.flip-clock-dot.bottom {
+.flipclock-dot.bottom {
   bottom: 30px; }
 
 @keyframes asd {
@@ -207,7 +207,7 @@
   100% {
     z-index: 4; } }
 
-.flip-clock-wrapper ul.play li.flip-clock-active .down {
+.flipclock-wrapper ul.play li.flipclock-active .down {
   animation: turn 0.5s 0.5s linear both; }
 
 @keyframes turn {
@@ -217,7 +217,7 @@
   100% {
     transform: rotateX(0deg); } }
 
-.flip-clock-wrapper ul.play li.flip-clock-before .up {
+.flipclock-wrapper ul.play li.flipclock-before .up {
   z-index: 2;
   animation: turn2 0.5s linear both; }
 
@@ -231,11 +231,11 @@
   }
 }
 
-.flip-clock-wrapper ul li.flip-clock-active {
+.flipclock-wrapper ul li.flipclock-active {
   z-index: 3; }
 
 /* SHADOW */
-.flip-clock-wrapper ul.play li.flip-clock-before .up .shadow {
+.flipclock-wrapper ul.play li.flipclock-before .up .shadow {
   background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0.1)), color-stop(100%, black));
   background: linear, top, rgba(0, 0, 0, 0.1) 0%, black 100%;
@@ -244,7 +244,7 @@
   background: linear, to bottom, rgba(0, 0, 0, 0.1) 0%, black 100%;
   animation: show 0.5s linear both; }
 
-.flip-clock-wrapper ul.play li.flip-clock-active .up .shadow {
+.flipclock-wrapper ul.play li.flipclock-active .up .shadow {
   background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0.1)), color-stop(100%, black));
   background: linear, top, rgba(0, 0, 0, 0.1) 0%, black 100%;
@@ -254,7 +254,7 @@
   animation: hide 0.5s 0.3s linear both; }
 
 /*DOWN*/
-.flip-clock-wrapper ul.play li.flip-clock-before .down .shadow {
+.flipclock-wrapper ul.play li.flipclock-before .down .shadow {
   background: -moz-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, black), color-stop(100%, rgba(0, 0, 0, 0.1)));
   background: linear, top, black 0%, rgba(0, 0, 0, 0.1) 100%;
@@ -263,7 +263,7 @@
   background: linear, to bottom, black 0%, rgba(0, 0, 0, 0.1) 100%;
   animation: show 0.5s linear both; }
 
-.flip-clock-wrapper ul.play li.flip-clock-active .down .shadow {
+.flipclock-wrapper ul.play li.flipclock-active .down .shadow {
   background: -moz-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, black), color-stop(100%, rgba(0, 0, 0, 0.1)));
   background: linear, top, black 0%, rgba(0, 0, 0, 0.1) 100%;
