new markup and responsive styles
Signed-off-by: Brian Espinosa <brian@getplayerpro.com>

--- a/src/flipclock/scss/_fc-base.scss
+++ b/src/flipclock/scss/_fc-base.scss
@@ -4,7 +4,8 @@
 
 $fc-font-family:    "Helvetica Neue", Helvetica, sans-serif !default;
 
-$fc-face-color:     #ccc !default;
+$fc-face-color:       #ccc !default;
+$fc-face-background:  #333 !default;
 
 .flipclock-wrapper {
   background: red;
