--- a/compiled/flipclock.css
+++ b/compiled/flipclock.css
@@ -1,25 +1,17 @@
-/* Get the bourbon mixin from http://bourbon.io */
 /* Reset */
 .flip-clock-wrapper * {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    -o-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -ms-backface-visibility: hidden;
-    -o-backface-visibility: hidden;
-    backface-visibility: hidden;
-}
+  margin: 0;
+  padding: 0;
+  line-height: normal;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  backface-visibility: hidden; }
 
-.flip-clock-wrapper a {
+.flip-clock-wrapper .faces-wrapper {
   cursor: pointer;
   text-decoration: none;
   color: #ccc; }
-
-.flip-clock-wrapper a:hover {
-  color: #fff; }
 
 .flip-clock-wrapper ul {
   list-style: none; }
@@ -37,31 +29,22 @@
 
 /* Main */
 .flip-clock-wrapper {
+  min-height: 100%;
   font: normal 11px "Helvetica Neue", Helvetica, sans-serif;
   -webkit-user-select: none; }
 
 .flip-clock-meridium {
-  background: none !important;
+  background: none;
   box-shadow: 0 0 0 !important;
-  font-size: 36px !important; }
-
-.flip-clock-meridium a { color: #313333; }
+  font-size: 36px !important;
+  color: #313333;
+  bottom: 10px; }
 
 .flip-clock-wrapper {
   text-align: center;
   position: relative;
   width: 100%;
-  margin: 1em;
-}
-
-.flip-clock-wrapper:before,
-.flip-clock-wrapper:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
-}
-.flip-clock-wrapper:after {
-    clear: both;
-}
+  margin: 1em; }
 
 /* Skeleton */
 .flip-clock-wrapper ul {
@@ -74,8 +57,7 @@
   font-weight: bold;
   line-height: 87px;
   border-radius: 6px;
-  background: #000;
-}
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7); }
 
 .flip-clock-wrapper ul li {
   z-index: 1;
@@ -84,40 +66,35 @@
   top: 0;
   width: 100%;
   height: 100%;
-  line-height: 87px;
-  text-decoration: none !important;
-}
+  line-height: 87px; }
 
 .flip-clock-wrapper ul li:first-child {
   z-index: 2; }
 
-.flip-clock-wrapper ul li a {
+.flip-clock-wrapper ul li .faces-wrapper {
   display: block;
   height: 100%;
   -webkit-perspective: 200px;
   -moz-perspective: 200px;
   perspective: 200px;
   margin: 0 !important;
-  overflow: visible !important;
-  cursor: default !important; }
+  overflow: visible !important; }
 
-.flip-clock-wrapper ul li a div {
+.flip-clock-wrapper ul li .faces-wrapper div {
   z-index: 1;
   position: absolute;
   left: 0;
   width: 100%;
   height: 50%;
-  font-size: 80px;
-  overflow: hidden; 
-  outline: 1px solid transparent; }
+  overflow: hidden; }
 
-.flip-clock-wrapper ul li a div .shadow {
+.flip-clock-wrapper ul li .faces-wrapper div .shadow {
   position: absolute;
   width: 100%;
   height: 100%;
   z-index: 2; }
 
-.flip-clock-wrapper ul li a div.up {
+.flip-clock-wrapper ul li .faces-wrapper div.up {
   -webkit-transform-origin: 50% 100%;
   -moz-transform-origin: 50% 100%;
   -ms-transform-origin: 50% 100%;
@@ -125,7 +102,7 @@
   transform-origin: 50% 100%;
   top: 0; }
 
-.flip-clock-wrapper ul li a div.up:after {
+.flip-clock-wrapper ul li .faces-wrapper div.up:after {
   content: "";
   position: absolute;
   top: 44px;
@@ -136,18 +113,15 @@
   background-color: #000;
   background-color: rgba(0, 0, 0, 0.4); }
 
-.flip-clock-wrapper ul li a div.down {
+.flip-clock-wrapper ul li .faces-wrapper div.down {
   -webkit-transform-origin: 50% 0;
   -moz-transform-origin: 50% 0;
   -ms-transform-origin: 50% 0;
   -o-transform-origin: 50% 0;
   transform-origin: 50% 0;
-  bottom: 0;
-  border-bottom-left-radius: 6px;
-  border-bottom-right-radius: 6px;
-}
+  bottom: 0; }
 
-.flip-clock-wrapper ul li a div div.inn {
+.flip-clock-wrapper ul li .faces-wrapper div div.inn {
   position: absolute;
   left: 0;
   z-index: 1;
@@ -160,23 +134,21 @@
   border-radius: 6px;
   font-size: 70px; }
 
-.flip-clock-wrapper ul li a div.up div.inn {
+.flip-clock-wrapper ul li .faces-wrapper div.up div.inn {
   top: 0; }
 
-.flip-clock-wrapper ul li a div.down div.inn {
+.flip-clock-wrapper ul li .faces-wrapper div.down div.inn {
   bottom: 0; }
 
 /* PLAY */
 .flip-clock-wrapper ul.play li.flip-clock-before {
   z-index: 3; }
 
-.flip-clock-wrapper .flip {   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7); }
-
 .flip-clock-wrapper ul.play li.flip-clock-active {
   -webkit-animation: asd 0.5s 0.5s linear both;
   -moz-animation: asd 0.5s 0.5s linear both;
   animation: asd 0.5s 0.5s linear both;
-  z-index: 5; }
+  z-index: 2; }
 
 .flip-clock-divider {
   float: left;
@@ -195,8 +167,7 @@
   height: 10px;
   position: absolute;
   border-radius: 50%;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-  left: 5px; }
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5); }
 
 .flip-clock-divider .flip-clock-label {
   position: absolute;
@@ -220,40 +191,24 @@
 @-webkit-keyframes asd {
   0% {
     z-index: 2; }
-
   20% {
     z-index: 4; }
-
   100% {
     z-index: 4; } }
 
 @-moz-keyframes asd {
   0% {
     z-index: 2; }
-
   20% {
     z-index: 4; }
-
-  100% {
-    z-index: 4; } }
-
-@-o-keyframes asd {
-  0% {
-    z-index: 2; }
-
-  20% {
-    z-index: 4; }
-
   100% {
     z-index: 4; } }
 
 @keyframes asd {
   0% {
     z-index: 2; }
-
   20% {
     z-index: 4; }
-
   100% {
     z-index: 4; } }
 
@@ -266,29 +221,27 @@
 @-webkit-keyframes turn {
   0% {
     -webkit-transform: rotateX(90deg); }
-
   100% {
     -webkit-transform: rotateX(0deg); } }
 
 @-moz-keyframes turn {
   0% {
     -moz-transform: rotateX(90deg); }
-
   100% {
     -moz-transform: rotateX(0deg); } }
 
-@-o-keyframes turn {
-  0% {
-    -o-transform: rotateX(90deg); }
-
-  100% {
-    -o-transform: rotateX(0deg); } }
-
 @keyframes turn {
   0% {
+    -webkit-transform: rotateX(90deg);
+    -moz-transform: rotateX(90deg);
+    -ms-transform: rotateX(90deg);
+    -o-transform: rotateX(90deg);
     transform: rotateX(90deg); }
-
   100% {
+    -webkit-transform: rotateX(0deg);
+    -moz-transform: rotateX(0deg);
+    -ms-transform: rotateX(0deg);
+    -o-transform: rotateX(0deg);
     transform: rotateX(0deg); } }
 
 .flip-clock-wrapper ul.play li.flip-clock-before .up {
@@ -300,29 +253,27 @@
 @-webkit-keyframes turn2 {
   0% {
     -webkit-transform: rotateX(0deg); }
-
   100% {
     -webkit-transform: rotateX(-90deg); } }
 
 @-moz-keyframes turn2 {
   0% {
     -moz-transform: rotateX(0deg); }
-
   100% {
     -moz-transform: rotateX(-90deg); } }
 
-@-o-keyframes turn2 {
-  0% {
-    -o-transform: rotateX(0deg); }
-
-  100% {
-    -o-transform: rotateX(-90deg); } }
-
 @keyframes turn2 {
   0% {
+    -webkit-transform: rotateX(0deg);
+    -moz-transform: rotateX(0deg);
+    -ms-transform: rotateX(0deg);
+    -o-transform: rotateX(0deg);
     transform: rotateX(0deg); }
-
   100% {
+    -webkit-transform: rotateX(-90deg);
+    -moz-transform: rotateX(-90deg);
+    -ms-transform: rotateX(-90deg);
+    -o-transform: rotateX(-90deg);
     transform: rotateX(-90deg); } }
 
 .flip-clock-wrapper ul li.flip-clock-active {
@@ -330,102 +281,62 @@
 
 /* SHADOW */
 .flip-clock-wrapper ul.play li.flip-clock-before .up .shadow {
-  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0.1)), color-stop(100%, black));
-  background: linear, top, rgba(0, 0, 0, 0.1) 0%, black 100%;
-  background: -o-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
-  background: -ms-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
-  background: linear, to bottom, rgba(0, 0, 0, 0.1) 0%, black 100%;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, black 100%);
   -webkit-animation: show 0.5s linear both;
   -moz-animation: show 0.5s linear both;
   animation: show 0.5s linear both; }
 
 .flip-clock-wrapper ul.play li.flip-clock-active .up .shadow {
-  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0.1)), color-stop(100%, black));
-  background: linear, top, rgba(0, 0, 0, 0.1) 0%, black 100%;
-  background: -o-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
-  background: -ms-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
-  background: linear, to bottom, rgba(0, 0, 0, 0.1) 0%, black 100%;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, black 100%);
   -webkit-animation: hide 0.5s 0.3s linear both;
   -moz-animation: hide 0.5s 0.3s linear both;
   animation: hide 0.5s 0.3s linear both; }
 
 /*DOWN*/
 .flip-clock-wrapper ul.play li.flip-clock-before .down .shadow {
-  background: -moz-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, black), color-stop(100%, rgba(0, 0, 0, 0.1)));
-  background: linear, top, black 0%, rgba(0, 0, 0, 0.1) 100%;
-  background: -o-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
-  background: -ms-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
-  background: linear, to bottom, black 0%, rgba(0, 0, 0, 0.1) 100%;
+  background: linear-gradient(to bottom, black 0%, rgba(0, 0, 0, 0.1) 100%);
   -webkit-animation: show 0.5s linear both;
   -moz-animation: show 0.5s linear both;
   animation: show 0.5s linear both; }
 
 .flip-clock-wrapper ul.play li.flip-clock-active .down .shadow {
-  background: -moz-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, black), color-stop(100%, rgba(0, 0, 0, 0.1)));
-  background: linear, top, black 0%, rgba(0, 0, 0, 0.1) 100%;
-  background: -o-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
-  background: -ms-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
-  background: linear, to bottom, black 0%, rgba(0, 0, 0, 0.1) 100%;
+  background: linear-gradient(to bottom, black 0%, rgba(0, 0, 0, 0.1) 100%);
   -webkit-animation: hide 0.5s 0.3s linear both;
   -moz-animation: hide 0.5s 0.3s linear both;
-  animation: hide 0.5s 0.2s linear both; }
+  animation: hide 0.5s 0.3s linear both; }
 
 @-webkit-keyframes show {
   0% {
     opacity: 0; }
-
   100% {
     opacity: 1; } }
 
 @-moz-keyframes show {
   0% {
     opacity: 0; }
-
-  100% {
-    opacity: 1; } }
-
-@-o-keyframes show {
-  0% {
-    opacity: 0; }
-
   100% {
     opacity: 1; } }
 
 @keyframes show {
   0% {
     opacity: 0; }
-
   100% {
     opacity: 1; } }
 
 @-webkit-keyframes hide {
   0% {
     opacity: 1; }
-
   100% {
     opacity: 0; } }
 
 @-moz-keyframes hide {
   0% {
     opacity: 1; }
-
-  100% {
-    opacity: 0; } }
-
-@-o-keyframes hide {
-  0% {
-    opacity: 1; }
-
   100% {
     opacity: 0; } }
 
 @keyframes hide {
   0% {
     opacity: 1; }
-
   100% {
     opacity: 0; } }
