--- a/src/flipclock/css/flipclock.scss
+++ b/src/flipclock/css/flipclock.scss
@@ -9,14 +9,10 @@
     backface-visibility: hidden;
 }
 
-.flip-clock-wrapper a {
+.flip-clock-wrapper .faces-wrapper {
     cursor: pointer;
     text-decoration: none;
     color: #ccc;
-}
-
-.flip-clock-wrapper a:hover {
-    color: #fff;
 }
 
 .flip-clock-wrapper ul {
@@ -53,7 +49,6 @@
 	bottom: 10px;
 }
 
-
 .flip-clock-wrapper {
     text-align: center;
     position: relative;
@@ -83,14 +78,14 @@
     top: 0;
     width: 100%;
     height: 100%;
-	line-height: 87px;
+    line-height: 87px;
 }
 
 .flip-clock-wrapper ul li:first-child {
     z-index: 2;
 }
 
-.flip-clock-wrapper ul li a {
+.flip-clock-wrapper ul li .faces-wrapper {
     display: block;
     height: 100%;
     @include perspective(200px);
@@ -98,7 +93,7 @@
     overflow: visible !important;
 }
 
-.flip-clock-wrapper ul li a div {
+.flip-clock-wrapper ul li .faces-wrapper div {
     z-index: 1;
     position: absolute;
     left: 0;
@@ -107,19 +102,19 @@
     overflow: hidden;
 }
 
-.flip-clock-wrapper ul li a div .shadow {
+.flip-clock-wrapper ul li .faces-wrapper div .shadow {
     position: absolute;
     width: 100%;
     height: 100%;
     z-index: 2;
 }
 
-.flip-clock-wrapper ul li a div.up {
+.flip-clock-wrapper ul li .faces-wrapper div.up {
     @include transform-origin(50% 100%);
     top: 0;
 }
 
-.flip-clock-wrapper ul li a div.up:after {
+.flip-clock-wrapper ul li .faces-wrapper div.up:after {
   content: "";
   position:absolute;
   top:44px;
@@ -131,12 +126,12 @@
   background-color: rgba(0,0,0,.4);
 }
 
-.flip-clock-wrapper ul li a div.down {
+.flip-clock-wrapper ul li .faces-wrapper div.down {
     @include transform-origin(50% 0);
     bottom: 0;
 }
 
-.flip-clock-wrapper ul li a div div.inn {
+.flip-clock-wrapper ul li .faces-wrapper div div.inn {
     position: absolute;
     left: 0;
     z-index: 1;
@@ -150,12 +145,12 @@
     font-size: 70px;
 }
 
-.flip-clock-wrapper ul li a div.up div.inn {
+.flip-clock-wrapper ul li .faces-wrapper div.up div.inn {
     top: 0;
 
 }
 
-.flip-clock-wrapper ul li a div.down div.inn {
+.flip-clock-wrapper ul li .faces-wrapper div.down div.inn {
     bottom: 0;
 }
 
