Latest CSS & JS compile

--- a/compiled/flipclock.css
+++ b/compiled/flipclock.css
@@ -3,9 +3,8 @@
   margin: 0;
   padding: 0;
   line-height: normal;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
+  -webkit-backface-visibility: hidden;
   backface-visibility: hidden; }
 
 .flip-clock-wrapper .faces-wrapper {
@@ -75,7 +74,6 @@
   display: block;
   height: 100%;
   -webkit-perspective: 200px;
-  -moz-perspective: 200px;
   perspective: 200px;
   margin: 0 !important;
   overflow: visible !important; }
@@ -96,9 +94,7 @@
 
 .flip-clock-wrapper ul li .faces-wrapper div.up {
   -webkit-transform-origin: 50% 100%;
-  -moz-transform-origin: 50% 100%;
   -ms-transform-origin: 50% 100%;
-  -o-transform-origin: 50% 100%;
   transform-origin: 50% 100%;
   top: 0; }
 
@@ -115,9 +111,7 @@
 
 .flip-clock-wrapper ul li .faces-wrapper div.down {
   -webkit-transform-origin: 50% 0;
-  -moz-transform-origin: 50% 0;
   -ms-transform-origin: 50% 0;
-  -o-transform-origin: 50% 0;
   transform-origin: 50% 0;
   bottom: 0; }
 
@@ -146,7 +140,6 @@
 
 .flip-clock-wrapper ul.play li.flip-clock-active {
   -webkit-animation: asd 0.5s 0.5s linear both;
-  -moz-animation: asd 0.5s 0.5s linear both;
   animation: asd 0.5s 0.5s linear both;
   z-index: 2; }
 
@@ -196,14 +189,6 @@
   100% {
     z-index: 4; } }
 
-@-moz-keyframes asd {
-  0% {
-    z-index: 2; }
-  20% {
-    z-index: 4; }
-  100% {
-    z-index: 4; } }
-
 @keyframes asd {
   0% {
     z-index: 2; }
@@ -215,7 +200,6 @@
 .flip-clock-wrapper ul.play li.flip-clock-active .down {
   z-index: 2;
   -webkit-animation: turn 0.5s 0.5s linear both;
-  -moz-animation: turn 0.5s 0.5s linear both;
   animation: turn 0.5s 0.5s linear both; }
 
 @-webkit-keyframes turn {
@@ -224,30 +208,19 @@
   100% {
     -webkit-transform: rotateX(0deg); } }
 
-@-moz-keyframes turn {
-  0% {
-    -moz-transform: rotateX(90deg); }
-  100% {
-    -moz-transform: rotateX(0deg); } }
-
 @keyframes turn {
   0% {
     -webkit-transform: rotateX(90deg);
-    -moz-transform: rotateX(90deg);
     -ms-transform: rotateX(90deg);
-    -o-transform: rotateX(90deg);
     transform: rotateX(90deg); }
   100% {
     -webkit-transform: rotateX(0deg);
-    -moz-transform: rotateX(0deg);
     -ms-transform: rotateX(0deg);
-    -o-transform: rotateX(0deg);
     transform: rotateX(0deg); } }
 
 .flip-clock-wrapper ul.play li.flip-clock-before .up {
   z-index: 2;
   -webkit-animation: turn2 0.5s linear both;
-  -moz-animation: turn2 0.5s linear both;
   animation: turn2 0.5s linear both; }
 
 @-webkit-keyframes turn2 {
@@ -256,24 +229,14 @@
   100% {
     -webkit-transform: rotateX(-90deg); } }
 
-@-moz-keyframes turn2 {
-  0% {
-    -moz-transform: rotateX(0deg); }
-  100% {
-    -moz-transform: rotateX(-90deg); } }
-
 @keyframes turn2 {
   0% {
     -webkit-transform: rotateX(0deg);
-    -moz-transform: rotateX(0deg);
     -ms-transform: rotateX(0deg);
-    -o-transform: rotateX(0deg);
     transform: rotateX(0deg); }
   100% {
     -webkit-transform: rotateX(-90deg);
-    -moz-transform: rotateX(-90deg);
     -ms-transform: rotateX(-90deg);
-    -o-transform: rotateX(-90deg);
     transform: rotateX(-90deg); } }
 
 .flip-clock-wrapper ul li.flip-clock-active {
@@ -281,37 +244,31 @@
 
 /* SHADOW */
 .flip-clock-wrapper ul.play li.flip-clock-before .up .shadow {
+  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, black 100%);
   -webkit-animation: show 0.5s linear both;
-  -moz-animation: show 0.5s linear both;
   animation: show 0.5s linear both; }
 
 .flip-clock-wrapper ul.play li.flip-clock-active .up .shadow {
+  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, black 100%);
   -webkit-animation: hide 0.5s 0.3s linear both;
-  -moz-animation: hide 0.5s 0.3s linear both;
   animation: hide 0.5s 0.3s linear both; }
 
 /*DOWN*/
 .flip-clock-wrapper ul.play li.flip-clock-before .down .shadow {
+  background: -webkit-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
   background: linear-gradient(to bottom, black 0%, rgba(0, 0, 0, 0.1) 100%);
   -webkit-animation: show 0.5s linear both;
-  -moz-animation: show 0.5s linear both;
   animation: show 0.5s linear both; }
 
 .flip-clock-wrapper ul.play li.flip-clock-active .down .shadow {
+  background: -webkit-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
   background: linear-gradient(to bottom, black 0%, rgba(0, 0, 0, 0.1) 100%);
   -webkit-animation: hide 0.5s 0.3s linear both;
-  -moz-animation: hide 0.5s 0.3s linear both;
   animation: hide 0.5s 0.3s linear both; }
 
 @-webkit-keyframes show {
-  0% {
-    opacity: 0; }
-  100% {
-    opacity: 1; } }
-
-@-moz-keyframes show {
   0% {
     opacity: 0; }
   100% {
@@ -324,12 +281,6 @@
     opacity: 1; } }
 
 @-webkit-keyframes hide {
-  0% {
-    opacity: 1; }
-  100% {
-    opacity: 0; } }
-
-@-moz-keyframes hide {
   0% {
     opacity: 1; }
   100% {
