--- a/src/flipclock/css/flipclock.css
+++ b/src/flipclock/css/flipclock.css
@@ -259,43 +259,43 @@
 
 .flip-clock-wrapper ul.play li.flip-clock-active .down {
   z-index: 2;
-  -webkit-animation: turn 0.5s 0.5s linear both;
-  -moz-animation: turn 0.5s 0.5s linear both;
-  animation: turn 0.5s 0.5s linear both; }
+  -webkit-animation: turn 0.3s 0.5s linear both;
+  -moz-animation: turn 0.3s 0.5s linear both;
+  animation: turn 0.3s 0.5s linear both; }
 
 @-webkit-keyframes turn {
   0% {
-    -webkit-transform: rotateX(90deg); }
+    -webkit-transform: rotateX(91deg); }
 
   100% {
     -webkit-transform: rotateX(0deg); } }
 
 @-moz-keyframes turn {
   0% {
-    -moz-transform: rotateX(90deg); }
+    -moz-transform: rotateX(91deg); }
 
   100% {
     -moz-transform: rotateX(0deg); } }
 
 @-o-keyframes turn {
   0% {
-    -o-transform: rotateX(90deg); }
+    -o-transform: rotateX(91deg); }
 
   100% {
     -o-transform: rotateX(0deg); } }
 
 @keyframes turn {
   0% {
-    transform: rotateX(90deg); }
+    transform: rotateX(91deg); }
 
   100% {
     transform: rotateX(0deg); } }
 
 .flip-clock-wrapper ul.play li.flip-clock-before .up {
   z-index: 2;
-  -webkit-animation: turn2 0.5s linear both;
-  -moz-animation: turn2 0.5s linear both;
-  animation: turn2 0.5s linear both; }
+  -webkit-animation: turn2 0.5s cubic-bezier(.34,.13,.93,.24) both;
+  -moz-animation: turn2 0.5s cubic-bezier(.34,.13,.93,.24) both;
+  animation: turn2 0.5s cubic-bezier(.34,.13,.93,.24) both; }
 
 @-webkit-keyframes turn2 {
   0% {
