--- a/src/flipclock/scss/_fc-base.scss
+++ b/src/flipclock/scss/_fc-base.scss
@@ -12,17 +12,17 @@ $fc-face-background:  #333 !default;
   font-family: $fc-font-family;
   font-size: 16px;
   -webkit-user-select: none;
-  
+
   text-align: center;
   position: relative;
   width: 100%;
   margin: 1em;
-  
+
   * {
     box-sizing: border-box;
     backface-visibility: hidden;
   }
-  
+
   ul {
     position: relative;
     float: left;
@@ -35,11 +35,11 @@ $fc-face-background:  #333 !default;
     border-radius: 6px;
     background: #000;
   }
-  
+
   .flipclock-label {
     font-size: .75em;
   }
-  
+
   // clearfix IE8 and up
   &.clearfix,
   .clearfix {
@@ -49,7 +49,7 @@ $fc-face-background:  #333 !default;
       clear: both;
     }
   }
-  
+
 }
 
 
@@ -72,13 +72,14 @@ $fc-face-background:  #333 !default;
 /* Skeleton */
 
 .flipclock-wrapper ul {
-    
+
 }
 .flipclock-wrapper ul li {
     z-index: 1;
     position: absolute;
     left: 0;
     top: 0;
+    margin: 0;
     width: 100%;
     height: 100%;
     line-height: 87px;
